# app/Http/Controllers/Api/CategoryController.php
@@ -16,16 +16,50 @@ class CategoryController extends Controller
      * @return \Illuminate\Http\Response
      */
     private $category;
-    
+
     public function __construct(Category $category)
     {
         $this->category = $category;
     }
+
+    /**
+     * @SWG\Get(
+     *   tags={"category"},
+     *   path="/api/v1/categories",
+     *   summary="List Categories",
+     *   operationId="list",
+     *   @SWG\Response(response=200, description="successful operation"),
+     *   @SWG\Response(response=406, description="not acceptable"),
+     *   @SWG\Response(response=500, description="internal server error"),
+     *   security={{"default": {}}},
+     * )
+     *
+     */
     public function index()
     {
         return $this->category->paginate(10);
     }
 
+    /**
+     * @SWG\Get(
+     *   tags={"category"},
+     *   path="/api/v1/categories/{id}/real-states",
+     *   summary="List Real-state by category",
+     *   operationId="list",
+     *   @SWG\Response(response=200, description="successful operation"),
+     *   @SWG\Response(response=406, description="not acceptable"),
+     *   @SWG\Response(response=500, description="internal server error"),
+     *   security={{"default": {}}},
+     *      @SWG\Parameter(
+     *          name="id",
+     *          in="path",
+     *          required=true,
+     *          description="-   Enter the id",
+     *          type="integer",
+     *      ),
+     * )
+     *
+     */
     public function realStates($id)
     {
         try {
@@ -42,6 +76,40 @@ class CategoryController extends Controller
         }
     }
 
+    /**
+     * @SWG\Post(
+     *   tags={"category"},
+     *   path="/api/v1/categories",
+     *   security={{"default": {}}},
+     *   summary="Create category",
+     *   operationId="create",
+     *   @SWG\Response(response=200, description="successful operation"),
+     *   @SWG\Response(response=406, description="not acceptable"),
+     *   @SWG\Response(response=500, description="internal server error"),
+     *      @SWG\Parameter(
+     *          name="name",
+     *          in="query",
+     *          required=true,
+     *          description="-   Enter the name",
+     *          type="string",
+     *      ),
+     *      @SWG\Parameter(
+     *          name="description",
+     *          in="query",
+     *          required=true,
+     *          description="-   Enter the description",
+     *          type="string",
+     *      ),
+     *      @SWG\Parameter(
+     *          name="slug",
+     *          in="query",
+     *          required=true,
+     *          description="-   Enter the slug",
+     *          type="string",
+     *      ),
+     * )
+     *
+     */
     public function store(CategoryRequest $request)
     {
 
@@ -57,15 +125,28 @@ class CategoryController extends Controller
             $message = new ApiMessages($e->getMessage());
             return response()->json($message->getMessage(), 401);
         }
-        
+
     }
 
     /**
-     * Display the specified resource.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
+     * @SWG\Get(
+     *   tags={"category"},
+     *   path="/api/v1/categories/{id}",
+     *   summary="Show Category",
+     *   operationId="show",
+     *   security={{"default": {}}},
+     *   @SWG\Parameter(
+     *      name="id",
+     *      in="path",
+     *      required=true,
+     *      description="-   Enter the id",
+     *      type="integer",
+     *   ),
+     *   @SWG\Response(response=200, description="successful operation"),
+     *   @SWG\Response(response=406, description="not acceptable"),
+     *   @SWG\Response(response=500, description="internal server error"),
+     * )
+    */
     public function show($id)
     {
         try {
@@ -75,26 +156,65 @@ class CategoryController extends Controller
             $message = new ApiMessages($e->getMessage());
             return response()->json($message->getMessage(), 401);
         }
-        
+
     }
 
+
     /**
-     * Update the specified resource in storage.
+     * @SWG\Put(
+     *   tags={"category"},
+     *   path="/api/v1/categories/{id}",
+     *   security={{"default": {}}},
+     *   summary="Update category",
+     *   operationId="update",
+     *   @SWG\Response(response=200, description="successful operation"),
+     *   @SWG\Response(response=406, description="not acceptable"),
+     *   @SWG\Response(response=500, description="internal server error"),
+     *      @SWG\Parameter(
+     *          name="id",
+     *          in="path",
+     *          required=true,
+     *          description="-   Enter the id",
+     *          type="string",
+     *      ),
+     *      @SWG\Parameter(
+     *          name="name",
+     *          in="query",
+     *          required=true,
+     *          description="-   Enter the name",
+     *          type="string",
+     *      ),
+     *      @SWG\Parameter(
+     *          name="description",
+     *          in="query",
+     *          required=true,
+     *          description="-   Enter the description",
+     *          type="string",
+     *      ),
+     *      @SWG\Parameter(
+     *          name="slug",
+     *          in="query",
+     *          required=true,
+     *          description="-   Enter the slug",
+     *          type="string",
+     *      ),
+     * )
      *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
      */
     public function update(Request $request, $id)
     {
         try {
             $data = $request->all();
-            $category = $this->category->create($data);
+            $category = $this->category->findOrFail($id);
+            $category->update($data);
             return response()->json(
                 [
                     'data'  =>  'Category updated Success!'
                 ], 201
             );
+        }catch (\Illuminate\Database\Eloquent\ModelNotFoundException $e) {
+            $message = new ApiMessages("Category not found!");
+            return response()->json($message, 404);
         } catch (\Exception $e) {
             $message = new ApiMessages($e->getMessage());
             return response()->json($message->getMessage(), 401);
@@ -102,11 +222,24 @@ class CategoryController extends Controller
     }
 
     /**
-     * Remove the specified resource from storage.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
+     * @SWG\Delete(
+     *   tags={"category"},
+     *   path="/api/v1/categories/{id}",
+     *   summary="Delete Category",
+     *   operationId="delete",
+     *   security={{"default": {}}},
+     *   @SWG\Parameter(
+     *      name="id",
+     *      in="path",
+     *      required=true,
+     *      description="-   Enter the id",
+     *      type="integer",
+     *   ),
+     *   @SWG\Response(response=200, description="successful operation"),
+     *   @SWG\Response(response=406, description="not acceptable"),
+     *   @SWG\Response(response=500, description="internal server error"),
+     * )
+    */
     public function destroy($id)
     {
         try {
