# app/Http/Controllers/Api/UserController.php
@@ -15,6 +15,20 @@ class UserController extends Controller
     {
         $this->user = $user;
     }
+
+    /**
+     * @SWG\Get(
+     *   tags={"user"},
+     *   path="/api/v1/users",
+     *   summary="List Users",
+     *   operationId="list",
+     *   @SWG\Response(response=200, description="successful operation"),
+     *   @SWG\Response(response=406, description="not acceptable"),
+     *   @SWG\Response(response=500, description="internal server error"),
+     *   security={{"default": {}}},
+     * )
+     *
+     */
     public function index()
     {
         $users = $this->user->paginate('10');
@@ -23,10 +37,56 @@ class UserController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
+     * @SWG\Post(
+     *   tags={"user"},
+     *   path="/api/v1/users",
+     *   security={{"default": {}}},
+     *   summary="Create User",
+     *   operationId="create",
+     *   @SWG\Response(response=200, description="successful operation"),
+     *   @SWG\Response(response=406, description="not acceptable"),
+     *   @SWG\Response(response=500, description="internal server error"),
+     *      @SWG\Parameter(
+     *          name="name",
+     *          in="query",
+     *          required=true,
+     *          description="-   Enter the name",
+     *          type="string",
+     *      ),
+     *      @SWG\Parameter(
+     *          name="email",
+     *          in="query",
+     *          required=true,
+     *          description="-   Enter the email",
+     *          type="string",
+     *      ),
+     *      @SWG\Parameter(
+     *          name="password",
+     *          in="query",
+     *          required=true,
+     *          description="-   Enter the password",
+     *          type="string",
+     *      ),
+     *      @SWG\Parameter(
+     *          name="password_confirmation",
+     *          in="query",
+     *          required=true,
+     *          description="-   Enter the password_confirmation",
+     *          type="string",
+     *      ),
+     *      @SWG\Parameter(
+     *          name="profile[phone]",
+     *          in="query",
+     *          required=true,
+     *          description="-   Enter the property profile",
+     *          type="array",
+     *          collectionFormat="multi",
+     *          @SWG\Items(
+     *              type="string",
+     *          )
+     *      ),
      *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
+     * )
      */
     public function store(UserAndProfileRequest $request)
     {
@@ -53,11 +113,24 @@ class UserController extends Controller
     }
 
     /**
-     * Display the specified resource.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
+     * @SWG\Get(
+     *   tags={"user"},
+     *   path="/api/v1/users/{id}",
+     *   summary="Show User",
+     *   operationId="show",
+     *   security={{"default": {}}},
+     *   @SWG\Parameter(
+     *      name="id",
+     *      in="path",
+     *      required=true,
+     *      description="-   Enter the id",
+     *      type="integer",
+     *   ),
+     *   @SWG\Response(response=200, description="successful operation"),
+     *   @SWG\Response(response=406, description="not acceptable"),
+     *   @SWG\Response(response=500, description="internal server error"),
+     * )
+    */
     public function show($id)
     {
         try {
@@ -108,11 +181,24 @@ class UserController extends Controller
     }
 
     /**
-     * Remove the specified resource from storage.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
+     * @SWG\Delete(
+     *   tags={"user"},
+     *   path="/api/v1/users/{id}",
+     *   summary="Delete User",
+     *   operationId="delete",
+     *   security={{"default": {}}},
+     *   @SWG\Parameter(
+     *      name="id",
+     *      in="path",
+     *      required=true,
+     *      description="-   Enter the id",
+     *      type="integer",
+     *   ),
+     *   @SWG\Response(response=200, description="successful operation"),
+     *   @SWG\Response(response=406, description="not acceptable"),
+     *   @SWG\Response(response=500, description="internal server error"),
+     * )
+    */
     public function destroy($id)
     {
         try {
